# BlockWorld

./: CMakeLists.txt
resources/data/: blocks.json
resources/data/blocks/: bedrock.json  coal_ore.json  copper_ore.json  diamond_ore.json  emerald_ore.json  flowing_lava.json  flowing_water.json  gold_ore.json  grass_block.json  gravel.json  mithril_ore.json  oak_leaves.json  oak_log.json  ruby_ore.json  sand.json  sapphire_ore.json  silver_ore.json  stone.json  tin_ore.json
resources/shaders/: world.frag  world.vert
src/client/: main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  DebugController.cpp  DebugController.h  InputManager.cpp  InputManager.h  JobSystem.cpp  JobSystem.h  ResourceManager.cpp  ResourceManager.h  ThreadSafeQueue.h  Window.cpp  Window.h
src/player/: Player.cpp  Player.h
src/renderer/: BlockSelectionRenderer.cpp  BlockSelectionRenderer.h  DebugRenderer.cpp  DebugRenderer.h  Frustum.cpp  Frustum.h  HudRenderer.cpp  HudRenderer.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureArray.cpp  TextureArray.h
src/world/: BlockMeshBuilder.cpp  BlockMeshBuilder.h  BlockModel.h  BlockRegistry.cpp  BlockRegistry.h  BlockType.h  Chunk.cpp  Chunk.h  ChunkCoord.h  ChunkManager.cpp  ChunkManager.h  GreedyMeshBuilder.cpp  GreedyMeshBuilder.h  World.cpp  World.h
src/world/generation/: TerrainGenerator.cpp  TerrainGenerator.h
src/world/save/: ChunkSerializer.cpp  ChunkSerializer.h  WorldSaveManager.cpp  WorldSaveManager.h
src/world/streaming/: ChunkStreamingTypes.h
(+10 files in other folders)
